<?xml version="1.0"?>
<package>
  <name>fastpeople</name>
  <version>0.0.0</version>
  <description>The fastpeople package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>fastrack</build_depend>
  <build_depend>fastrack_msgs</build_depend>
  <build_depend>fastrack_srvs</build_depend>
  <build_depend>crazyflie_human</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>fastrack</run_depend>
  <run_depend>fastrack_msgs</run_depend>
  <run_depend>fastrack_srvs</run_depend>
  <run_depend>crazyflie_human</run_depend>
</package>
